refactor: id changed to uuid format, update handler added, swagger small changes
